cd2t-100-core/src/test/resources/invalidGroovy/InvalidParameterAnnotation.groovy
@Opcode("MPARAMAN")
class MissingParameterAnnotation {
  static void apply(ExecutionEnvironment execEnv,
                    @Parameter(parameterType = ParameterType.LABEL) int second) {

  }
}
